--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
               "node_modules/alertifyjs/build/css/alertify.min.css",
               "node_modules/alertifyjs/build/css/alertify.rtl.min.css",
               "node_modules/alertifyjs/build/css/themes/semantic.min.css",
-
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": [
