--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.0-alpha1",
     "jquery": "^3.6.4",
